--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,8 @@
 [deps]
+DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
 PowerPlots = "229d1e32-5c67-4c9a-a884-d6a3a7f23cfa"
+VegaLite = "112f6efa-9a02-5b7d-90c0-432ed331239a"
