--- a/Project.toml
+++ b/Project.toml
@@ -3,8 +3,10 @@ DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 ExportAll = "ad2082ca-a69e-11e9-38fa-e96309a31fe4"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
+JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
 PowerPlots = "229d1e32-5c67-4c9a-a884-d6a3a7f23cfa"
+ReinforcementLearning = "158674fc-8238-5cab-b5ba-03dfc80d1318"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 VegaLite = "112f6efa-9a02-5b7d-90c0-432ed331239a"
