--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 ExportAll = "ad2082ca-a69e-11e9-38fa-e96309a31fe4"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
@@ -6,9 +7,11 @@ Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 IntervalSets = "8197267c-284f-5f27-9208-e0e47529a953"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
+LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
 PowerPlots = "229d1e32-5c67-4c9a-a884-d6a3a7f23cfa"
+PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 ReinforcementLearning = "158674fc-8238-5cab-b5ba-03dfc80d1318"
 ReinforcementLearningExperiments = "6bd458e5-1694-412f-b601-3a888375c491"
 ReinforcementLearningZoo = "d607f57d-ee1e-4ba7-bcf2-7734c1e31854"
